# rusty-paper-wallet

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: bin.rs  error.rs  html.css  html.rs  lib.rs  main.rs  template-min.html  template.html
