[package]
name = "rusty-paper-wallet"
version = "0.5.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
license = "MIT"
description = "Generates bitcoin paper wallet offline"
homepage = "https://github.com/RCasatta/rusty-paper-wallet"
repository = "https://github.com/RCasatta/rusty-paper-wallet"
documentation = "https://docs.rs/rusty-paper-wallet/"
keywords = ["bitcoin", "paper", "wallet", "offline"]
readme = "README.md"

[dependencies]
bitcoin = { version="0.25.0", features =["rand"]}
qr_code = "0.17.0"
bmp-monochrome = "0.13.0"
base64 = "0.13.0"