[package]
name = "rusty-paper-wallet"
version = "0.6.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
license = "MIT"
description = "Generates bitcoin paper wallet offline"
homepage = "https://github.com/RCasatta/rusty-paper-wallet"
repository = "https://github.com/RCasatta/rusty-paper-wallet"
documentation = "https://docs.rs/rusty-paper-wallet/"
keywords = ["bitcoin", "paper", "wallet", "offline"]
readme = "README.md"

[dependencies]
bitcoin = { version="0.25.2", features = ["rand"] }
qr_code = { version="1.0.0", features = ["bmp"] }
base64 = "0.13.0"