[package]
name = "rusty-paper-wallet"
version = "0.8.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
license = "MIT"
description = "Generates bitcoin paper wallet offline"
homepage = "https://github.com/RCasatta/rusty-paper-wallet"
repository = "https://github.com/RCasatta/rusty-paper-wallet"
documentation = "https://docs.rs/rusty-paper-wallet/"
keywords = ["bitcoin", "paper", "wallet", "offline"]
readme = "README.md"

[dependencies]
bitcoin = { version="0.27", features = ["rand"] }
miniscript = "6.0"
qr_code = { version="1.1.0", features = ["bmp"] }
base64 = "0.13.0"
structopt = "0.3"
log = "^0.4"
env_logger = "0.9"
maud = "0.22"

[lib]
name = "rusty_paper_wallet"
path = "src/lib.rs"

[[bin]]
name = "rusty-paper-wallet"
path = "src/bin.rs"